front_end_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  env: prod
spec:
  minReadySeconds: 10
  replicas: 9
  selector: 
    matchLabels:
      app: frontend
      ver: 1.0
  strategy:
    rollingUpdate:
      maxSurge: 35%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
        ver: 1.0
    spec:
      containers: 
        - name: frontend
          image: <>
          ports:
            - containerPort: 8080
              protocol: TCP
