openmrs.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: openmrs-deploy
spec:
  minReadySeconds: 10
  replicas: 2
  selector: 
    matchLabels:
      app: openmrs
      ver: 0.1
  strategy:
    rollingUpdate:
      maxSurge: 35%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gol
        ver: 1.0
    spec:
      imagePullSecrets:
        - name: registrypullsecret
      containers: 
        - name: gameoflife
          image: puru7791/myopenmrs:0.1
          ports:
            - containerPort: 8080
              protocol: TCP
