frontend_service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
spec: 
  selector:
    app: frontend
  type: ClusterIp
  ports:
    - name: http
      port: 8080
      protocol: TCP
