mysql-openmrs.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim: 
            claimName: azure-managed-disk
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - port: 3306
