openmrs-service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: openmrs-svc
spec: 
  selector:
    app: openmrs
  type: ClusterIP
  ports:
    - port: 8080
