ingress_resource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
spec:
  rules:
  - host: "myapplication.com"
    http:
      paths:
      - pathType: 
        path: "/frontend"
        backend:
          service:
            name: myapp
            port:
              number: 80
