ingress_rs.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-openmrs
spec:
  rules:
  - host: "openmrs.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/openmrs"
        backend:
          service:
            name: openmrs-svc
            port:
              number: 8080
